# buzz

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  README.md  RELEASING.md  ct.yaml  docker-compose.yml  flake.nix  justfile  pnpm-lock.yaml
.github/workflows/: ci.yml  helm-chart.yml  release.yml  sprout-agent-bundle.yml
crates/buzz-acp-sandbox/: Cargo.toml  README.md
crates/buzz-acp-sandbox/src/: lib.rs  main.rs
crates/buzz-acp-sandbox/tests/: fake_bwrap.rs
crates/buzz-acp/src/: acp.rs  base_prompt.md  config.rs  lib.rs  pool.rs  queue.rs  relay.rs
crates/buzz-agent/src/: config.rs  lib.rs  wire.rs
crates/buzz-agent/tests/: fake_llm.rs  golden_transcripts.rs
crates/buzz-cli/src/: lib.rs  validate.rs
crates/buzz-cli/src/commands/: issues.rs  mod.rs  patches.rs
crates/buzz-dev-mcp/: Cargo.toml
crates/buzz-dev-mcp/src/: lib.rs  read_file.rs  shell.rs  str_replace.rs  view_image.rs
crates/buzz-relay/src/: main.rs  subscription.rs
crates/buzz-relay/src/handlers/: side_effects.rs
crates/buzz-sdk/src/: builders.rs
crates/buzz-test-client/tests/: e2e_relay.rs
crates/buzz-tui/: Cargo.toml  PLAN.md  README.md  UX_IMPROVEMENT_PLAN.md
crates/buzz-tui-client/: Cargo.toml
crates/buzz-tui-client/src/: app_data.rs  lib.rs  models.rs
crates/buzz-tui/src/: acp.rs  agent_store.rs  app.rs  app_data.rs  cli.rs  clipboard.rs  live.rs  main.rs  memory.rs  refresh.rs  relay.rs  render.rs  ui.rs  workspace.rs
crates/buzz-tui/src/app/: agents.rs  channels.rs  composer.rs  confirm.rs  hints.rs  navigation.rs  palette.rs  profile_social.rs  reminders.rs  timeline.rs  workflows.rs  workspaces.rs
crates/buzz-tui/src/client/: app_data.rs  mod.rs  models.rs
crates/sprout-acp/src/: config.rs
crates/sprout-agent/: README.md
crates/sprout-agent/src/: config.rs  lib.rs  llm.rs  mcp.rs
crates/sprout-cli/src/: lib.rs
crates/sprout-db/src/: channel.rs
deploy/charts/buzz/: Chart.yaml  README.md  values.schema.json  values.yaml
deploy/charts/buzz/ci/: quickstart-values.yaml
deploy/charts/buzz/examples/: argocd-app.yaml  flux-helmrelease.yaml  ingress-cert-manager.yaml  secret-sample.yaml
deploy/charts/buzz/templates/: NOTES.txt  _helpers.tpl  _validate.tpl  deployment.yaml  httproute.yaml  ingress.yaml  pdb.yaml  pvc-git.yaml  quickstart-minio-init.yaml  quickstart-minio.yaml  quickstart-typesense.yaml  secret-chart.yaml  service.yaml  serviceaccount.yaml
deploy/charts/buzz/tests/: networking_test.yaml  quickstart_bundled_test.yaml  quickstart_guards_test.yaml  render_test.yaml  secrets_test.yaml  validation_test.yaml
deploy/charts/buzz/tests/fixtures/: ha-values.yaml  production-existing-secret-values.yaml
deploy/compose/: README.md  compose.yml
deploy/nixos/: README.md
desktop/: package.json  playwright.config.ts
desktop/scripts/: build-release-config.mjs  check-file-sizes.mjs  check-px-text.mjs
desktop/src/: main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/.cargo/: config.toml
desktop/src-tauri/src/: events.rs  lib.rs  migration.rs  migration_tests.rs  models.rs
desktop/src-tauri/src/commands/: agents.rs  legacy_storage.rs  media_download.rs  mod.rs  profile.rs
desktop/src-tauri/src/managed_agents/: discovery.rs  personas.rs  restore.rs  runtime.rs  storage.rs  types.rs
desktop/src/app/: App.tsx  AppShell.tsx  AppShellContext.tsx  AppShellOverlays.tsx  AppTopChrome.tsx  useReloadShortcut.ts
desktop/src/features/agents/: channelAgents.ts  hooks.ts  openCreateAgentEvent.ts
desktop/src/features/agents/ui/: AddTeamToChannelDialog.tsx  AgentSessionTranscriptList.tsx  AgentsView.tsx  CreateAgentDialog.tsx  ManagedAgentRow.tsx  ManagedAgentSessionPanel.tsx  PersonaCatalogDetailsSheet.tsx  TeamDialog.tsx  TeamsSection.tsx  UnifiedAgentsSection.tsx  agentSessionTranscript.test.mjs  agentSessionTranscript.ts  agentSessionTranscriptHelpers.ts  agentSessionTypes.ts
desktop/src/features/channels/: hooks.ts
desktop/src/features/channels/ui/: AddChannelBotPersonasSection.tsx  AddChannelBotTeamsSection.tsx  AgentSessionThreadPanel.tsx  BotActivityBar.tsx  ChannelManagementSheet.tsx  ChannelMembersBar.tsx  ChannelPane.tsx  ChannelScreen.tsx  ChannelScreen.types.ts  ChannelScreenHeader.tsx  MembersSidebar.tsx  MembersSidebarMemberCard.tsx  QuickBotBar.tsx  useMembersSidebarActions.ts
desktop/src/features/chat/ui/: ChatHeader.tsx
desktop/src/features/custom-emoji/ui/: CustomEmojiSettingsCard.tsx
desktop/src/features/home/: useResizableInboxListWidth.ts
desktop/src/features/messages/: hooks.ts  useFetchOlderMessages.ts
desktop/src/features/presence/: hooks.ts
desktop/src/features/search/: useSearchResults.ts
desktop/src/features/settings/: UpdateChecker.tsx
desktop/src/features/workspaces/: legacyWorkspaceStorage.test.mjs  legacyWorkspaceStorage.ts
desktop/src/shared/api/: observerRelay.test.mjs  observerRelay.ts  relayClientSession.ts  relayReconnectReplay.test.mjs  relayReconnectReplay.ts  tauri.ts  types.ts
desktop/src/shared/hooks/: use-mobile.tsx  useStickToBottom.ts  useThreadPanelWidth.ts
desktop/src/shared/lib/: remarkSpoilers.test.mjs  remarkSpoilers.ts
desktop/src/shared/styles/: globals.css
desktop/src/shared/theme/: ThemeProvider.tsx
desktop/src/shared/ui/: OverlayPanelBackdrop.tsx  SpoilerParticles.tsx  UserAvatar.tsx  ViewLoadingFallback.tsx  alert-dialog.tsx  avatar.tsx  deferredModalOpen.ts  dialog.tsx  markdown.test.mjs  markdown.tsx  markdownUtils.ts  modalMotion.ts  sheet.tsx
desktop/src/testing/: e2eBridge.ts
desktop/tests/e2e/: agents.spec.ts  channel-controls-screenshots.spec.ts  channels.spec.ts  custom-emoji.spec.ts  file-attachment.spec.ts  messaging.spec.ts  onboarding.spec.ts  relay-reconnect.spec.ts  smoke.spec.ts  spoiler.spec.ts  video-attachment.spec.ts
desktop/tests/helpers/: bridge.ts
mobile/: pubspec.yaml
nix/modules/: buzz-relay.nix
scripts/: build-agent-bundle.sh  bundle-sidecars.sh  check-file-sizes-core.mjs  post-screenshots.sh  stage-windows-bash.sh
web/: package.json
web/scripts/: check-file-sizes.mjs
(+71 files in other folders)
