[package]
name = "buzz-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Ratatui terminal client for Buzz"

[[bin]]
name = "buzz-tui"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
base64 = "0.22"
buzz-core = { workspace = true }
buzz-sdk = { workspace = true }
buzz-ws-client = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.29"
diffy = "0.5"
hex = { workspace = true }
infer = "0.19"
nostr = { workspace = true }
ratatui = { version = "0.30.1", default-features = false, features = ["crossterm_0_29"] }
reqwest = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "process", "rt-multi-thread", "macros", "sync", "time"] }
url = { workspace = true }
uuid = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", default-features = false, features = ["signal"] }
